tests/ui/unpin.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/unpin.rs:12:18
   |
12 |     assert_unpin(foo());
   |     ------------ ^^^^^ within `Named<_foo_impl::Foo<'_>>`, the trait `Unpin` is not implemented for `PhantomPinned`
   |     |
   |     required by a bound introduced by this call
   |
   = note: consider using `Box::pin`
   = note: required because it appears within the type `Named<_foo_impl::Foo<'_>>`
note: required by a bound in `assert_unpin`
  --> tests/ui/unpin.rs:9:25
   |
9  | fn assert_unpin(_: impl Unpin) {}
   |                         ^^^^^ required by this bound in `assert_unpin`
